# pg_kafka

./: .gitignore  CLAUDE.md  Cargo.toml  DEVELOPMENT_HISTORY.md  Dockerfile.dev  LICENSE  PERFORMANCE.md  PLAN.md  PROJECT.md  README.md  bench.json  codecov.yml  conformance.json  docker-compose.yml  pg_kafka.control  restart.sh  test_client.rs  test_metadata.rs
.devcontainer/: devcontainer.json
.github/: SETUP.md
.github/scripts/: ingest-tracer.mjs
.github/workflows/: ci.yml  evidence.yml
docs/: ACT_USAGE.md  AUDIT-2026-06.md  E2E_TEST_COVERAGE_REVIEW.md  FULL_KAFKA_COMPLIANCE_PLAN.md  KAFKA_PROTOCOL_COVERAGE.md  LICENSING.md  PERFORMANCE.md  PGRX_TESTING_GUIDE.md  PHASE_3B_COORDINATOR_DESIGN.md  PROTOCOL_DEVIATIONS.md  README.md  REPOSITORY_PATTERN.md  SHADOW_MODE_FLOW_DIAGRAM.md  SHADOW_MODE_TESTING.md  TEST_COVERAGE_ANALYSIS.md  TEST_STRATEGY.md
docs/architecture/: ADR-001-partitioning-and-retention.md  ADR-002-staff-level-architectural-improvements.md
evidence/: README.md
evidence/bench/: assemble.mjs  bench.mjs  package.json  raw_insert.mjs  run.sh
evidence/conformance/: apis.json  merge.mjs  run.sh
evidence/conformance/kafkajs/: conformance.mjs  package.json
evidence/conformance/python/: confluent_conformance.py  kafka_python_conformance.py  requirements.txt
evidence/conformance/sarama/: conformance.go  go.mod
hooks/: README.md  install.sh  pre-commit
kafka_test/: Cargo.toml
kafka_test/src/: admin.rs  assertions.rs  common.rs  fixtures.rs  lib.rs  main.rs  setup.rs
kafka_test/src/compression/: edge_cases.rs  mod.rs  producer.rs  roundtrip.rs
kafka_test/src/concurrent/: mod.rs  multi_consumer.rs  multi_producer.rs  pipelining.rs  producer_consumer.rs  race_conditions.rs
kafka_test/src/consumer/: basic.rs  from_offset.rs  mod.rs  multiple.rs
kafka_test/src/consumer_group/: coordinator_state.rs  lifecycle.rs  mod.rs  rebalance.rs  rebalance_edge_cases.rs
kafka_test/src/edge_cases/: boundaries.rs  empty_states.rs  large_data.rs  mod.rs
kafka_test/src/error_paths/: consumer_errors.rs  coordinator_errors.rs  fetch_errors.rs  mod.rs  offset_errors.rs  producer_errors.rs
kafka_test/src/idempotent/: basic.rs  deduplication.rs  edge_cases.rs  mod.rs  protocol_encoding.rs  replay_test.rs
kafka_test/src/long_poll/: edge_cases.rs  mod.rs  timeout.rs  wakeup.rs
kafka_test/src/metadata/: mod.rs
kafka_test/src/negative/: expected_failures.rs  mod.rs
kafka_test/src/offset_management/: boundaries.rs  by_timestamp.rs  commit_fetch.rs  edge_cases.rs  mod.rs  no_reuse.rs
kafka_test/src/partition/: key_routing.rs  mod.rs  multi_partition.rs  routing_edge_cases.rs
kafka_test/src/performance/: mod.rs  regression.rs  throughput.rs
kafka_test/src/producer/: acks_zero.rs  basic.rs  batch.rs  mod.rs  timestamp.rs
kafka_test/src/protocol/: mod.rs
kafka_test/src/shadow/: assertions.rs  basic_forwarding.rs  dialup.rs  error_handling.rs  external_client.rs  helpers.rs  mod.rs  percentage_routing.rs  replay.rs  topic_mapping.rs  transaction_integration.rs
kafka_test/src/transaction/: atomicity.rs  basic.rs  eos.rs  isolation.rs  mod.rs
scripts/: generate-evidence.sh  record-session.sh  run-shadow-tests.sh
sql/: bootstrap.sql  pg_kafka--0.0.0.sql  shadow_mode.sql  tune_autovacuum.sql
src/: config.rs  lib.rs  listener.rs  worker.rs
src/kafka/: backpressure.rs  broker_metadata.rs  constants.rs  context.rs  coordinator.rs  dispatch.rs  error.rs  handler_context.rs  handlers.rs  listener.rs  messages.rs  mod.rs  notifications.rs  partitioner.rs  pending_fetches.rs  protocol.rs  response_builders.rs
src/kafka/assignment/: member_assignment.rs  mod.rs  subscription.rs  tests.rs
src/kafka/handlers/: admin.rs  consumer.rs  coordinator.rs  fetch.rs  helpers.rs  init_producer_id.rs  metadata.rs  mod.rs  produce.rs  tests.rs  transaction.rs
src/testing/: helpers.rs  mocks.rs  mod.rs
tests/: encoding_tests.rs  helpers.rs  integration_tests.rs  property_tests.rs  protocol_tests.rs  worker_tests.rs
(+23 files in other folders)
