[package]
name = "pg_kafka"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "pgrx_embed_pg_kafka"
path = "./src/bin/pgrx_embed.rs"

[features]
default = ["pg14"]
pg13 = ["pgrx/pg13", "pgrx-tests/pg13"]
pg14 = ["pgrx/pg14", "pgrx-tests/pg14"]
pg15 = ["pgrx/pg15", "pgrx-tests/pg15"]
pg16 = ["pgrx/pg16", "pgrx-tests/pg16"]
pg17 = ["pgrx/pg17", "pgrx-tests/pg17"]
pg18 = ["pgrx/pg18", "pgrx-tests/pg18"]
pg_test = []

[dependencies]
pgrx = "0.16.1"
tokio = { version = "1", features = [
    "rt-multi-thread",
    "net",
    "io-util",
    "macros",
    "sync",
    "time",
] }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
bytes = "1"
kafka-protocol = "0.17"
crossbeam-channel = "0.5"
once_cell = "1"
thiserror = "2.0.17"
anyhow = "1"
serde_json = "1"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
pgrx-tests = "0.16.1"
tokio-test = "0.4"
proptest = "1"
mockall = "0.13"
insta = { version = "1.40", features = ["yaml"] }

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1
