[package]
name = "pg_kafka"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "pgrx_embed_pg_kafka"
path = "./src/bin/pgrx_embed.rs"

[features]
default = ["pg14"]
pg13 = ["pgrx/pg13", "pgrx-tests/pg13"]
pg14 = ["pgrx/pg14", "pgrx-tests/pg14"]
pg15 = ["pgrx/pg15", "pgrx-tests/pg15"]
pg16 = ["pgrx/pg16", "pgrx-tests/pg16"]
pg17 = ["pgrx/pg17", "pgrx-tests/pg17"]
pg18 = ["pgrx/pg18", "pgrx-tests/pg18"]
pg_test = []

[dependencies]
# PostgreSQL extension framework (requires nightly Rust)
pgrx = "=0.16.1"

# Async runtime for TCP listener and connection handling
tokio = { version = "1.48", features = [
    "rt-multi-thread",
    "net",
    "io-util",
    "macros",
    "sync",
    "time",
] }
tokio-util = { version = "0.7.17", features = ["codec"] }
futures = "0.3.31"

# Binary protocol handling
bytes = "1.11"
kafka-protocol = "0.17"

# Concurrency and synchronization
crossbeam-channel = "0.5.15"
once_cell = "1.21"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Production-grade structured logging (thread-safe, async-safe)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Serialization and utilities
serde_json = "1.0"
uuid = { version = "1.19", features = ["v4"] }

# Partitioner support
murmur2 = "0.1"
rand = "0.8"

[dev-dependencies]
pgrx-tests = "=0.16.1"
tokio-test = "0.4.4"
proptest = "1.5"
mockall = "0.13.1"
insta = { version = "1.40", features = ["yaml"] }

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "thin"  # "thin" provides most benefits of "fat" with smaller intermediate files
codegen-units = 1
