[package]
name = "kafka_test"
version = "0.1.0"
edition = "2021"

[dependencies]
# Kafka client for E2E testing
rdkafka = { version = "0.36", features = ["cmake-build"] }

# Async runtime
tokio = { version = "1.48", features = ["rt-multi-thread", "macros"] }

# Database client for verification
tokio-postgres = "0.7.15"
