[package]
name = "kafka_test"
version = "0.1.0"
edition = "2021"

[dependencies]
# Kafka client for E2E testing
rdkafka = { version = "0.36", features = ["cmake-build", "zstd"] }

# Async runtime
tokio = { version = "1.48", features = [
    "rt-multi-thread",
    "macros",
    "time",
    "sync",
    "net",
    "io-util",
] }

# For protocol encoding/decoding
bytes = "1"

# Database client for verification
tokio-postgres = "0.7.15"

# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# Unique test identifiers
uuid = { version = "1", features = ["v4"] }

# Serialization for JSON output
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Timing utilities
chrono = { version = "0.4", features = ["serde"] }
